styles: add mobile version

--- a/index.html
+++ b/index.html
@@ -9,32 +9,27 @@
 <body>
     <header>
         <div class="container">
-            <img src="img/Logo.svg" alt="Logo escrito `Pequenos cuidado`">
             <div class="menu-section on">
-                <div class="menu-toggle">
-                    <div class="one"></div>
-                    <div class="two"></div>
-                    <div class="three"></div>
-                </div>
-
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="#">Sintomas</a>
-                        </li>
-                        <li>
-                            <a href="#">SUS</a>
-                        </li>
-                        <li>
-                            <a href="#">Testes</a>
-                        </li>
-                        <li>
-                            <a href="#">Cuidados</a>
-                        </li>
-                    </ul>
-                </nav>
+              <div class="menu-toggle">
+                <div class="one"></div>
+                <div class="two"></div>
+                <div class="three"></div>
+              </div>
+              <nav>
+                <ul>
+                  <li>
+                    <a href="#">Home</a>
+                  </li>
+                  <li>
+                    <a href="#">Atividades</a>
+                  </li>
+                  <li>
+                    <a href="#">Contato</a>
+                  </li>
+                </ul>
+              </nav>
             </div>
-        </div>
+          </div>
     </header>
 
     <main>
@@ -44,11 +39,13 @@
                     <h1>Covid alerta!</h1>
                     <h2>Estamos em um momento difícil, precisamos nos cuidar e cuidar do próximo!</h2>
                     <h5>Para transmitir um melhor cuidado de longe, aqui daremos dicas e auxílios para podermos ter mais zelo por nós e pelo próximo.</h5>
+                    <button class="vamos">Vamos lá</button>
                 </div>
                 <img src="img/medicos.svg" alt="Ilustração de duas médicas">
-                <a href="#">Vamos lá</a>
             </div>
         </section>
     </main>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
